# Shadow-Scan

./: .gitignore  Dockerfile  IMPROVEMENTS_SUMMARY.md  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
scripts/: add_yara_rule.py  setup_db.py
static/css/: custom.css
static/js/: main.js
static/yara_rules/: malware_rules.yar
templates/: base.html  history.html  index.html  results.html
utils/: analyzer.py  file_validator.py
